10_ContainerOrchestrationKubernetes/17_PrivateDockerRepo/deployment_ECR.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: my-app
        image: 084335829984.dkr.ecr.eu-north-1.amazonaws.com/my-repository:1.0
        imagePullPolicy: Always
        ports: 
        - containerPort: 3080
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 3080
