10_ContainerOrchestrationKubernetes/17_PrivateDockerRepo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 172-105-146-108.ip.linodeusercontent.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-server-service
            port: 
              number: 8080
